fix: docs,index.html 수정

--- a/module-domain/src/main/resources/static/index.html
+++ b/module-domain/src/main/resources/static/index.html
@@ -89,16 +89,16 @@
 
             <label for="mode">모드 선택:</label>
             <select id="mode" name="mode">
-                <option value="quick">빠른 모드</option>
-                <option value="normal">일반 모드</option>
-                <option value="filter">필터 모드</option>
+                <option value="quick">QUICK</option>
+                <option value="normal">NORMAL</option>
+                <option value="filter">FILTER</option>
             </select>
 
             <label for="apiKey">API Key:</label>
-            <input id="apiKey" name="apiKey" required type="text" value="dsadqjenwqjnd">
+            <input id="apiKey" name="apiKey" required type="text" value="">
 
             <label for="referrer">Referer:</label>
-            <input id="referrer" name="referrer" required type="text" value="https://google.com">
+            <input id="referrer" name="referrer" required type="text" value="">
 
             <button onclick="sendJsonRequest()" type="button">JSON 요청 전송</button>
             <button onclick="sendFormRequest()" type="button">폼 요청 전송</button>
