fix: index update

--- a/module-domain/src/main/resources/static/index.html
+++ b/module-domain/src/main/resources/static/index.html
@@ -85,13 +85,13 @@
             <input id="url" name="url" required type="text" value="https://api.profanity-filter.run/api/v1/filter">
 
             <label for="text">필터링할 단어:</label>
-            <input id="text" name="text" required type="text">
+            <input id="text" name="text" required type="text" value="민트초코는 아주 개자식이야">
 
             <label for="mode">모드 선택:</label>
             <select id="mode" name="mode">
+                <option value="filter">FILTER</option>
                 <option value="quick">QUICK</option>
                 <option value="normal">NORMAL</option>
-                <option value="filter">FILTER</option>
             </select>
 
             <label for="apiKey">API Key:</label>
