feat: update profanity filter API URL in index.html
Signed-off-by: hgkim <hgkim@openerd.com>

--- a/profanity-api/src/main/resources/static/index.html
+++ b/profanity-api/src/main/resources/static/index.html
@@ -82,7 +82,7 @@
         <h1>필터링 요청</h1>
         <form id="filterForm">
             <label for="url">요청 URL:</label>
-            <input id="url" name="url" required type="text" value="https://api.profanity-filter.run/api/v1/filter">
+            <input id="url" name="url" required type="text" value="https://api.profanity.kr-filter.com/api/v1/filter">
 
             <label for="text">필터링할 단어:</label>
             <input id="text" name="text" required type="text" value="민트초코는 아주 개자식이야">
